# arm-none-gcc-builder

./: ..dockerignore.un~  .Dockerfile.un~  .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeGraphVizOptions.cmake  CMakeLists.txt  Dockerfile  Dockerfile~  README.md  STM32F411VETx_FLASH.ld  compile.py  make-cross.py  make.py
application/: CMakeLists.txt
application/core/: CMakeLists.txt
application/core/include/: application_header.h
application/core/src/: main.c  main.cpp
application/core/src/include/: private_application_header.h
application/driver-interface-stubs/: CMakeLists.txt
application/driver-interface-stubs/include/: driver_interface_stubs.h
application/driver-interface-stubs/src/: driver-interface-stubs.c
application/middleware/: CMakeLists.txt
application/middleware/include/: middleware.h  middleware_init_status.h
application/middleware/src/: middleware.c  middleware.cpp
application/middleware/src/include/: driver_api.h  private_middleware_header.h
cmake/: cppcheck.cmake  fetch-content.cmake  utils.cmake
cmake/fetch-content/: fetch-cmsis.cmake  fetch-stm32cube.cmake  fetch-svd.cmake  fetch-test-frameworks.cmake
cmake/setup/: .configure-cmsis.cmake.un~  CMakeLists.txt  configure-cmsis.cmake  configure-svd.cmake  test-framework.cmake
cmake/toolchains/: arm-none-eabi-gcc-toolchain.cmake  arm-none-eabi-toolchain.cmake
cmake/utils/: auto-binutils.cmake  find-targets.cmake  git-utils.cmake
cross/: CMakeLists.txt
cross/cmake/fetch-content/: fetch-content.cmake
cross/cmake/fetch-content/content/: fetch-cmsis.cmake  fetch-stm32cube.cmake  fetch-svd.cmake
cross/cmake/toolchains/: arm-none-eabi-gcc-toolchain.cmake
docs/: README.md
host/: CMakeLists.txt
host/cmake/fetch-content/: fetch-content.cmake
host/cmake/fetch-content/content/: fetch-test-frameworks.cmake
reference/: build.py
scripts/: build.py  flashdev.py
tests/: CMakeLists.txt  STUB.txt  test_builds.py
tests/catch2/: CMakeLists.txt
tests/catch2/src/: catch2-usage-example.cpp  middleware-init.cpp
tests/meta/: CMakeLists.txt
